# video_concatenater

./: CMakeLists.txt  mainwindow.cpp  processwidget.cpp
